DuPont DevSB/src/objects/Geography__c.object
<CustomObject>
    <fields>
        <fullName>Aliases__c</fullName>
        <description>carriage return delimited list of alternative names for this geographical area.</description>
        <label>Aliases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code2__c</fullName>
        <description>Unique code across the parent. This field is required and unique across all records with the same parent area.  External Id.  
TODO: Add a trigger to enforce this two key uniqueness.</description>
        <externalId>true</externalId>
        <label>SubCode</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Unique code for the this area.  This field is required and unique across all records.</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Brief description or comment about this geography; used to reference source of information regarding regional determination or relationships</description>
        <inlineHelpText>Comment or link to reference about this geography</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullNameASCII__c</fullName>
        <description>the ASCII equiv of fullname. The reason for this field is the FullName from non-english lanuages potentially have special characters that are know to cause issues with itegration and other customizations.</description>
        <label>FullNameASCII</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>This name represents the full name of the geographic region.  mainly added to allow a reference to +20 char state name (used in Germany)</description>
        <label>FullName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>the latitude centroid of this area.</description>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_Name__c</fullName>
        <description>Country specific name to define this administrative level</description>
        <label>Level Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>administrative level of territory in geo hierarchy
1=Region, 2=Sub-Region, 3=Country, 4=State, 5=County or similar,6=postalcode</description>
        <label>Level</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>the longitude centroid of this area.</description>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeric_Code__c</fullName>
        <description>Numeric code used for this area,  if available.</description>
        <label>Numeric Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Parent Geography record</description>
        <label>Parent</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Geography</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geography</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geography</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>